cleaned up footer and added some more details to the login page including alignment and correct font family

--- a/front-end/styles/styles.css
+++ b/front-end/styles/styles.css
@@ -10,9 +10,6 @@ html, body {
   font-family: 'sfText';
 }
 div.view{
-  width: 100%;
-  height:70%;
-  background-color: red;
 }
 
 .md-display-3{
@@ -22,9 +19,10 @@ div.view{
   color: rgb(66,66,66);
 }
 .splash-logo {
+
+  margin-left: 42.5%;
+  margin-right: 42.5%;
   width: 200px;
-  margin-left: 39%;
-  margin-right: 39%;
   opacity:0.4;
 }
 
@@ -334,5 +332,21 @@ md-input-container .md-errors-spacer {
   height:10px;
 }
 
-
+video#bgvid { 
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    min-width: 100%;
+    min-height: 100%;
+    width: auto;
+    height: auto;
+    z-index: -100;
+    -ms-transform: translateX(-50%) translateY(-50%);
+    -moz-transform: translateX(-50%) translateY(-50%);
+    -webkit-transform: translateX(-50%) translateY(-50%);
+    -webkit-filter: blur(2px);
+    transform: translateX(-50%) translateY(-50%);
+    background-size: cover; 
+    opacity: 0.7;
+}
 
